SERVER-57494 Clear the locker before re-attempting a command using the same opCtx as we used to refresh sharding state