src/mongo/db/service_entry_point_common.h
@@ -94,6 +94,8 @@ struct ServiceEntryPointCommon {
             OperationContext* opCtx, const ShardCannotRefreshDueToLocksHeldInfo& refreshInfo) const
             noexcept = 0;
 
+        virtual void resetLockerState(OperationContext* opCtx) const noexcept = 0;
+
         virtual void advanceConfigOpTimeFromRequestMetadata(OperationContext* opCtx) const = 0;
 
         MONGO_WARN_UNUSED_RESULT_FUNCTION virtual std::unique_ptr<PolymorphicScoped>
